<resources>
    <string name="app_name" translatable="false">SafetyPlus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello, World!</string>

    <string name="japanese" translatable="false">日本語</string>
    <string name="chinese" translatable="false">中文</string>
    <string name="korean" translatable="false">한국어</string>
    <string name="english" translatable="false">English</string>

    <string name="Regular">Regular</string>
    <string name="HighOctane">HighOctane</string>
    <string name="Diesel">Diesel</string>

    <string name="attention">Drive carefully.</string>

    <string name="turn">slow down. turn carefully</string>
</resources>