<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Language">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonJp"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:background="#f6f6f6"
            android:text="@string/japanese"
            android:gravity="start|center_vertical"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonKr"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#f6f6f6"
            android:text="@string/korean"
            android:gravity="start|center_vertical"
            android:textSize="20sp" />


        <Button
            android:id="@+id/buttonZh"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#f6f6f6"
            android:text="@string/chinese"
            android:gravity="start|center_vertical"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonEn"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#f6f6f6"
            android:text="@string/english"
            android:gravity="start|center_vertical"
            android:textSize="20sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>