<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/buttonDrive"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:contentDescription="@string/hello_world"
        android:id="@+id/buttonLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/buttonOil"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:background="#00000000"
        app:srcCompat="@drawable/language" />

    <ImageButton
        android:contentDescription="@string/hello_world"
        android:id="@+id/buttonOil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:background="#00000000"
        app:srcCompat="@drawable/oil" />

    <ImageButton
        android:contentDescription="@string/hello_world"
        android:id="@+id/buttonDrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#00000000"
        app:srcCompat="@drawable/drive" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Regular" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world" />

</RelativeLayout>